# sixlg

src/sixlg_description/: CMakeLists.txt  package.xml
src/sixlg_description/description/: left_leg.urdf.xacro  materials.urdf.xacro  right_leg.urdf.xacro  robot.urdf.xacro  robot_core.urdf.xacro  robot_core.xacro
src/sixlg_description/launch/: kinematics.launch.py  launch_sim.launch.py  motor_controller.launch.py  rsp.launch.py
src/sixlg_interfaces/: CMakeLists.txt  package.xml
src/sixlg_interfaces/msg/: ServoAngles.msg
src/sixlg_kinematics/: CMakeLists.txt  package.xml
src/sixlg_kinematics/include/sixlg_kinematics/: JointStatePublisher.hpp  Kinematics.hpp  Leg.hpp
src/sixlg_kinematics/src/: JointStatePublisher.cpp  Kinematics.cpp  Leg.cpp  joint_state_publisher.cpp  kinematics.cpp
src/sixlg_motor_controller/: CMakeLists.txt  package.xml
src/sixlg_motor_controller/arduino/motor_controller/: motor_controller.ino
src/sixlg_motor_controller/include/sixlg_motor_controller/: MotorController.hpp  SerialPort.hpp  TestPublisher.hpp
src/sixlg_motor_controller/src/: MotorController.cpp  SerialPort.cpp  TestPublisher.cpp  main.cpp  motor_controller.cpp  test_publisher.cpp
